# uvatradier

./: pyproject.toml  requirements.txt  setup.py
Ideas/: logit.ipynb
examples/: account_ex.py  chain.json  demo.py  example.py  notes.txt  quotes_ex.py
uvatradier/: __init__.py  account.py  base.py  companies.py  equity_order.py  options_data.py  options_order.py  quotes.py  stream.py  tradier.py
