[tool.poetry]
name = "uvatradier"
version = "0.4.11"
readme = "README.md"
authors = ["Tom Hammons"]
description = "A Python client for the UVA Tradier API"

[tool.poetry.dependencies]
python = "^3.10"
asttokens = "3.0.0"
asyncio = "3.4.3"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
colorama = "0.4.6"
contourpy = "1.3.1"
cycler = "0.12.1"
executing = "2.1.0"
fonttools = "4.55.3"
icecream = "2.1.3"
idna = "3.10"
kiwisolver = "1.4.8"
matplotlib = "3.10.0"
numpy = "2.1.3"
packaging = "24.2"
pandas = "2.2.3"
pi = "0.1.2"
pillow = "11.1.0"
pygments = "2.19.1"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
requests = "2.32.3"
six = "1.17.0"
tzdata = "2024.2"
urllib3 = "2.3.0"
websockets = ">=10.4,<11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
